clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010711_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20010711-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*):
        %9 = alloca s32i*, "a", align 8
        store %arg0, %9
        return
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "a", align 4
        %2 = const 0 : s32i
        store %2, %0
        scope {
                %4 = const #cir.ptr<null> : s32i*
                cmp
                if %5 {
                        %8 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                } else {
                        call @foo(%1) [all]
                        %6 = get_global @exit : (s32i) -> void*
                        %7 = const 0 : s32i
                        call @exit(%7) [all]
                        yield
                }
                yield
        }
        %3 = load %0 : s32i
        return %3
}
