clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010904_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20010904-1.c" (c, x86_64-unknown-linux-gnu)
global y : rec_y[2] = Zero { ty: Array { element_type: Named("rec_y"), size: 2 } } [external, default, align 32, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %5 = const 1 : s64i
                %6 = get_global @y : rec_y[2]*
                get_element
                %8 = cast(bitcast) %7 : s8i*
                %9 = const 0 : s64i
                %10 = get_global @y : rec_y[2]*
                get_element
                %12 = cast(bitcast) %11 : s8i*
                ptr_diff
                %14 = const 31 : s64i
                and
                %16 = cast(int_to_bool) %15 : bool
                if %16 {
                        %17 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
