clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20010915_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20010915-1.c" (c, x86_64-unknown-linux-gnu)
global __const.main.args : s8i*[5] = ConstArray { ty: Array { element_type: Pointer { pointee: Named("s8i"), addr_space: None }, size: 5 }, elts: Array([GlobalView { ty: Pointer { pointee: Named("s8i"), addr_space: None }, symbol: ".str", indices: None }, GlobalView { ty: Pointer { pointee: Named("s8i"), addr_space: None }, symbol: ".str.1", indices: None }, GlobalView { ty: Pointer { pointee: Named("s8i"), addr_space: None }, symbol: ".str.2", indices: None }, GlobalView { ty: Pointer { pointee: Named("s8i"), addr_space: None }, symbol: ".str.3", indices: None }, GlobalView { ty: Pointer { pointee: Named("s8i"), addr_space: None }, symbol: ".str.4", indices: None }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]
global r.cnt : s32i = CirInt { ty: Named("s32i"), value: "0" } [internal, default, align 4, dso_local]
global r.c : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("b"), trailing_zeros_num: 1 } [internal, default, align 1, dso_local]
global check : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global o : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global .str : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("a"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("b"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("c"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("d"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("e"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global h : s8i* = Dialect { dialect: "cir", mnemonic: "ptr", raw: Some("null"), ty: Some(Pointer { pointee: Named("s8i"), addr_space: None }) } [external, default, align 8, dso_local]
global u : s8i* = Dialect { dialect: "cir", mnemonic: "ptr", raw: Some("null"), ty: Some(Pointer { pointee: Named("s8i"), addr_space: None }) } [external, default, align 8, dso_local]

fn strcmp(%arg0: s8i*, %arg1: s8i*) -> s32i [external, c, nothrow];
fn s(%arg6: s8i*, %arg7: s8i**) -> s8i* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg6: s8i*, %arg7: s8i**):
        %160 = alloca s8i*, "v", align 8
        %161 = alloca s8i**, "pp", align 8
        %162 = alloca s8i*, "__retval", align 8
        store %arg6, %160
        store %arg7, %161
        scope {
                %169 = load %160 : s8i*, align 8
                %170 = get_global @.str : s8i[2]*
                %171 = cast(array_to_ptrdecay) %170 : s8i*
                %172 = call @strcmp(%169, %171) : s32i [all]
                %173 = const 0 : s32i
                cmp
                %175 = ternary %174 ? { : bool
                        %182 = const true : bool
                        yield %182
                } : {
                        %177 = get_global @check : s32i*
                        %178 = load %177 : s32i, align 4
                        inc
                        store %179, %177, align 4
                        %180 = const 1 : s32i
                        cmp
                        yield %181
                }
                if %175 {
                        %176 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %163 = load %160 : s8i*, align 8
        %164 = const 1 : s32i
        ptr_stride
        %166 = load %161 : s8i**, align 8
        store %165, %166, align 8
        %167 = const #cir.ptr<null> : s8i*
        store %167, %162
        %168 = load %162 : s8i*
        return %168
}
fn m(%arg5: s8i*) -> s8i* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg5: s8i*):
        %156 = alloca s8i*, "x", align 8
        %157 = alloca s8i*, "__retval", align 8
        store %arg5, %156
        %158 = get_global @abort : () -> void*
        call @abort() [all]
        %159 = load %157 : s8i*
        return %159
}
fn r(%arg4: s8i*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s8i*):
        %119 = alloca s8i*, "f", align 8
        %120 = alloca s32i, "__retval", align 4
        store %arg4, %119
        %121 = get_global @r.c : s8i[2]*
        %122 = get_global @r.cnt : s32i*
        scope {
                %131 = load %119 : s8i*, align 8
                %132 = load %131 : s8i, align 1
                %133 = cast(integral) %132 : s32i
                %134 = cast(array_to_ptrdecay) %121 : s8i*
                %135 = load %134 : s8i, align 1
                %136 = cast(integral) %135 : s32i
                cmp
                %138 = ternary %137 ? { : bool
                        %155 = const true : bool
                        yield %155
                } : {
                        %145 = const 1 : s64i
                        %146 = load %119 : s8i*, align 8
                        ptr_stride
                        %148 = load %147 : s8i, align 1
                        %149 = cast(integral) %148 : s32i
                        %150 = const 1 : s64i
                        get_element
                        %152 = load %151 : s8i, align 1
                        %153 = cast(integral) %152 : s32i
                        cmp
                        yield %154
                }
                %139 = ternary %138 ? { : bool
                        %144 = const true : bool
                        yield %144
                } : {
                        %141 = load %122 : s32i, align 4
                        %142 = const 3 : s32i
                        cmp
                        yield %143
                }
                if %139 {
                        %140 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %123 = const 0 : s64i
        get_element
        %125 = load %124 : s8i, align 1
        inc
        store %126, %124, align 1
        %127 = load %122 : s32i, align 4
        inc
        store %128, %122, align 4
        %129 = const 1 : s32i
        store %129, %120
        %130 = load %120 : s32i
        return %130
}
fn x(%arg2: s32i, %arg3: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i, %arg3: s8i**):
        %27 = alloca s32i, "argc", align 4
        %28 = alloca s8i**, "argv", align 8
        %29 = alloca s32i, "__retval", align 4
        %30 = alloca s32i, "opt", align 4
        %31 = alloca s8i*, "g", align 8
        %32 = alloca s8i*, "p", align 8
        store %arg2, %27
        store %arg3, %28
        %33 = const 0 : s32i
        store %33, %30, align 4
        %34 = const #cir.ptr<null> : s8i*
        store %34, %31, align 8
        %35 = const #cir.ptr<null> : s8i*
        store %35, %32, align 8
        scope {
                %54 = load %27 : s32i, align 4
                %55 = get_global @o : s32i*
                %56 = load %55 : s32i, align 4
                cmp
                %58 = ternary %57 ? { : bool
                        %116 = load %27 : s32i, align 4
                        %117 = const 2 : s32i
                        cmp
                        yield %118
                } : {
                        %115 = const false : bool
                        yield %115
                }
                %59 = ternary %58 ? { : bool
                        %108 = get_global @o : s32i*
                        %109 = load %108 : s32i, align 4
                        %110 = cast(integral) %109 : s64i
                        %111 = load %28 : s8i**, align 8
                        ptr_stride
                        %113 = load %112 : s8i*, align 8
                        %114 = cast(ptr_to_bool) %113 : bool
                        yield %114
                } : {
                        %107 = const false : bool
                        yield %107
                }
                if %59 {
                        %61 = get_global @o : s32i*
                        %62 = load %61 : s32i, align 4
                        %63 = cast(integral) %62 : s64i
                        %64 = load %28 : s8i**, align 8
                        ptr_stride
                        %66 = load %65 : s8i*, align 8
                        %67 = call @s(%66, %32) : s8i* [all]
                        store %67, %31, align 8
                        scope {
                                %92 = load %31 : s8i*, align 8
                                %93 = cast(ptr_to_bool) %92 : bool
                                if %93 {
                                        %94 = const 0 : s8i
                                        %95 = load %31 : s8i*, align 8
                                        %96 = const 1 : s32i
                                        ptr_stride
                                        store %97, %31, align 8
                                        store %94, %95, align 1
                                        %98 = load %31 : s8i*, align 8
                                        %99 = call @s(%98, %32) : s8i* [all]
                                        %100 = get_global @h : s8i**
                                        store %99, %100, align 8
                                        scope {
                                                %101 = load %31 : s8i*, align 8
                                                %102 = load %32 : s8i*, align 8
                                                cmp
                                                if %103 {
                                                        %104 = load %31 : s8i*, align 8
                                                        %105 = call @m(%104) : s8i* [all]
                                                        %106 = get_global @h : s8i**
                                                        store %105, %106, align 8
                                                        yield
                                                }
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        %68 = get_global @o : s32i*
                        %69 = load %68 : s32i, align 4
                        %70 = cast(integral) %69 : s64i
                        %71 = load %28 : s8i**, align 8
                        ptr_stride
                        %73 = load %72 : s8i*, align 8
                        %74 = call @s(%73, %32) : s8i* [all]
                        %75 = get_global @u : s8i**
                        store %74, %75, align 8
                        scope {
                                %76 = get_global @o : s32i*
                                %77 = load %76 : s32i, align 4
                                %78 = cast(integral) %77 : s64i
                                %79 = load %28 : s8i**, align 8
                                ptr_stride
                                %81 = load %80 : s8i*, align 8
                                %82 = load %32 : s8i*, align 8
                                cmp
                                if %83 {
                                        %84 = get_global @o : s32i*
                                        %85 = load %84 : s32i, align 4
                                        %86 = cast(integral) %85 : s64i
                                        %87 = load %28 : s8i**, align 8
                                        ptr_stride
                                        %89 = load %88 : s8i*, align 8
                                        %90 = call @m(%89) : s8i* [all]
                                        %91 = get_global @u : s8i**
                                        store %90, %91, align 8
                                        yield
                                }
                                yield
                        }
                        yield
                } else {
                        %60 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                while {
                        %49 = get_global @o : s32i*
                        %50 = load %49 : s32i, align 4
                        inc
                        store %51, %49, align 4
                        %52 = load %27 : s32i, align 4
                        cmp
                        condition %53
                } do {
                        scope {
                                %38 = get_global @o : s32i*
                                %39 = load %38 : s32i, align 4
                                %40 = cast(integral) %39 : s64i
                                %41 = load %28 : s8i**, align 8
                                ptr_stride
                                %43 = load %42 : s8i*, align 8
                                %44 = call @r(%43) : s32i [all]
                                %45 = const 0 : s32i
                                cmp
                                if %46 {
                                        %47 = const 1 : s32i
                                        store %47, %29
                                        %48 = load %29 : s32i
                                        return %48
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %36 = const 0 : s32i
        store %36, %29
        %37 = load %29 : s32i
        return %37
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca s8i*[5], "args", align 16
        store %arg0, %0
        store %arg1, %1
        %4 = const 0 : s32i
        store %4, %2
        %5 = get_global @__const.main.args : s8i*[5]*
        copy
        scope {
                %9 = const 5 : s32i
                %10 = cast(array_to_ptrdecay) %3 : s8i**
                %11 = call @x(%9, %10) : s32i [all]
                %12 = const 0 : s32i
                cmp
                %14 = ternary %13 ? { : bool
                        %26 = const true : bool
                        yield %26
                } : {
                        %22 = get_global @check : s32i*
                        %23 = load %22 : s32i, align 4
                        %24 = const 2 : s32i
                        cmp
                        yield %25
                }
                %15 = ternary %14 ? { : bool
                        %21 = const true : bool
                        yield %21
                } : {
                        %17 = get_global @o : s32i*
                        %18 = load %17 : s32i, align 4
                        %19 = const 5 : s32i
                        cmp
                        yield %20
                }
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %6 = get_global @exit : (s32i) -> void*
        %7 = const 0 : s32i
        call @exit(%7) [all]
        %8 = load %2 : s32i
        return %8
}
